--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,16 @@
   text-align: center;
   font-style: italic;
   font-weight: bold;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .blogpost2 {
   text-align: center;
   font-family: monospace;
   font-size: 16px;
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 .aboutme {
